    HADOOP-7896. (atm)

    HADOOP-8317. Update maven-assembly-plugin to 2.3 - fix build on FreeBSD
    (Radim Kolar via bobby)

    HADOOP-8172. Configuration no longer sets all keys in a deprecated key 
    list. (Anupam Seth via bobby)

    HADOOP-7868. Hadoop native fails to compile when default linker
    option is -Wl,--as-needed. (Trevor Robinson via eli)

Release 0.23.3 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-7967. Need generalized multi-token filesystem support (daryn)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8108. Move method getHostPortString() from NameNode to NetUtils.
    (Brandon Li via jitendra)

    HADOOP-8288. Remove references of mapred.child.ulimit etc. since they are
    not being used any more (Ravi Prakash via bobby)

    HADOOP-8535. Cut hadoop build times in half (Job Eagles via bobby)

    HADOOP-8110. Fix trash checkpoint collisions (Jason Lowe via daryn)

    HADOOP-8525. Provide Improved Traceability for Configuration (bobby)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-8088. User-group mapping cache incorrectly does negative caching on
    transient failures (Khiwal Lee via bobby)

    HADOOP-8179. risk of NPE in CopyCommands processArguments() (Daryn Sharp
    via bobby)

    HADOOP-6963. In FileUtil.getDU(..), neither include the size of directories
    nor follow symbolic links.  (Ravi Prakash via szetszwo)

    HADOOP-8180. Remove hsqldb since its not needed from pom.xml (Ravi Prakash
    via tgraves)

    HADOOP-8014. ViewFileSystem does not correctly implement getDefaultBlockSize,
    getDefaultReplication, getContentSummary (John George via bobby)

    HADOOP-7510. Tokens should use original hostname provided instead of ip
    (Daryn Sharp via bobby)

    HADOOP-8283. Allow tests to control token service value (Daryn Sharp via
    bobby)

    HADOOP-8286. Simplify getting a socket address from conf (Daryn Sharp via
    bobby)

    HADOOP-8227. Allow RPC to limit ephemeral port range. (bobby)
